<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:tag="display_rider_info" android:background="#fff">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:text="@string/name" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/riderName"
                android:textSize="17sp"
                android:text="" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:text="@string/departure_two_points" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:id="@+id/riderLoc"
                android:text="" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:text="@string/arrival_two_points" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/riderDest"
                android:textSize="17sp"
                android:text="" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:text="@string/passengers_number" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/riderNumber"
                android:textSize="17sp"
                android:text="" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="17sp"
                android:text="@string/detour" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/riderDetour"
                android:textSize="17sp"
                android:text="" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:theme="@style/PrimaryButton"
            android:text="@string/preview_route"
            android:textAllCaps="false"
    android:id="@+id/showPath"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    android:layout_marginTop="30dp">

        <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/PrimaryButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:id="@+id/acceptRider"/>

        <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/SecondaryButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/decline"
                android:textAllCaps="false"
                android:id="@+id/cancel"/>
    </LinearLayout>
</LinearLayout>